working on the ui

--- a/bitcoin_pages/templates/bitcoin_pages/index.html
+++ b/bitcoin_pages/templates/bitcoin_pages/index.html
@@ -87,7 +87,7 @@
 					<div class="single-about">
 						<div class="single-about-img">
 							<div class="single-about-img-inner">
-								<a href="#"><img src="{% static 'assets/img/bg/bg1.jpg' %}" class="img-fluid" alt=""></a>
+								<a href="{% url 'bitcoin_trading' %}"><img src="{% static 'assets/img/bg/bg1.jpg' %}" class="img-fluid" alt=""></a>
 							</div>
 						</div>
 						<div class="single-about-caption">
@@ -95,10 +95,10 @@
 								<i class="fab fa-btc"></i>
 							</div>
 							<div class="single-about-title">
-								<h5>Bitcoin Transition</h5>
+								<h5>Bitcoin Trading</h5>
 							</div>
 							<div class="single-about-dec">
-								<p>Lorem ipsum dolor sit consectetur adipiscing elit sed do.</p>
+								<p>Bifonix has consistently taken measures to makes online trading and investing accessible </p>
 							</div>
 						</div>
 					</div>
@@ -108,7 +108,7 @@
 					<div class="single-about">
 						<div class="single-about-img">
 							<div class="single-about-img-inner">
-								<a href="#"><img src="{% static 'assets/img/bg/bg4.jpg' %}" class="img-fluid" alt=""></a>
+								<a href="{% url 'coin_buy' %}"><img src="{% static 'assets/img/bg/bg4.jpg' %}" class="img-fluid" alt=""></a>
 							</div>
 						</div>
 						<div class="single-about-caption">
@@ -119,7 +119,7 @@
 								<h5>Coin Buy & Sell</h5>
 							</div>
 							<div class="single-about-dec">
-								<p>Lorem ipsum dolor sit consectetur adipiscing elit sed do.</p>
+								<p>With Bitfonix, you can easily buy Bitcoin with cash.</p>
 							</div>
 						</div>
 					</div>
@@ -129,7 +129,7 @@
 					<div class="single-about">
 						<div class="single-about-img">
 							<div class="single-about-img-inner">
-								<a href="#"><img src="{% static 'assets/img/bg/bg5.jpg' %}" class="img-fluid" alt=""></a>
+								<a href="{% url 'bitcoin_ethereum' %}"><img src="{% static 'assets/img/bg/bg5.jpg' %}" class="img-fluid" alt=""></a>
 							</div>
 						</div>
 						<div class="single-about-caption">
@@ -140,7 +140,7 @@
 								<h5>Bitcoin & Ethereum</h5>
 							</div>
 							<div class="single-about-dec">
-								<p>Lorem ipsum dolor sit consectetur adipiscing elit sed do.</p>
+								<p>Bitcoin and Ethereum is much more than just a digital currency.</p>
 							</div>
 						</div>
 					</div>
@@ -150,7 +150,7 @@
 					<div class="single-about">
 						<div class="single-about-img">
 							<div class="single-about-img-inner">
-								<a href="#"><img src="{% static 'assets/img/bg/bg6.jpg' %}" class="img-fluid" alt=""></a>
+								<a href="{% url 'security_ensure' %}"><img src="{% static 'assets/img/bg/bg6.jpg' %}" class="img-fluid" alt=""></a>
 							</div>
 						</div>
 						<div class="single-about-caption">
@@ -161,7 +161,7 @@
 								<h5>Account Security</h5>
 							</div>
 							<div class="single-about-dec">
-								<p>Lorem ipsum dolor sit consectetur adipiscing elit sed do.</p>
+								<p>We take every necessary precaution to keep you safe and secure..</p>
 							</div>
 						</div>
 					</div>
@@ -171,7 +171,7 @@
 					<div class="single-about">
 						<div class="single-about-img">
 							<div class="single-about-img-inner">
-								<a href="#"><img src="{% static 'assets/img/bg/bg3.jpg' %}" class="img-fluid" alt=""></a>
+								<a href="{% url 'crypto_trading' %}"><img src="{% static 'assets/img/bg/bg3.jpg' %}" class="img-fluid" alt=""></a>
 							</div>
 						</div>
 						<div class="single-about-caption">
@@ -182,7 +182,7 @@
 								<h5>Cryptocurrency Trading</h5>
 							</div>
 							<div class="single-about-dec">
-								<p>Lorem ipsum dolor sit consectetur adipiscing elit sed do.</p>
+								<p>Bank on Bitfonix’s experience as a global fintech leade</p>
 							</div>
 						</div>
 					</div>
@@ -192,7 +192,7 @@
 					<div class="single-about">
 						<div class="single-about-img">
 							<div class="single-about-img-inner">
-								<a href="#"><img src="{% static 'assets/img/bg/bg1.jpg' %}" class="img-fluid" alt=""></a>
+								<a href="{% url 'bitcoin_legality' %}"><img src="{% static 'assets/img/bg/bg1.jpg' %}" class="img-fluid" alt=""></a>
 							</div>
 						</div>
 						<div class="single-about-caption">
@@ -203,7 +203,7 @@
 								<h5>Bitcoin Legality</h5>
 							</div>
 							<div class="single-about-dec">
-								<p>Lorem ipsum dolor sit consectetur adipiscing elit sed do.</p>
+								<p>Access crypto assets exchange platform technology under the registered trademark "BITFONIX"</p>
 							</div>
 						</div>
 					</div>
@@ -231,21 +231,32 @@
 					
                     <!--Accordion Box-->
                     <ul class="accordion-box">
-                        <li class="accordion block">
-                            <div class="acc-btn">
-                                <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>How to buy & sell bitcoin?</div>
-                            <div class="acc-content">
-                                <div class="content">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. </p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="accordion block">
+						<li class="accordion block">
                             <div class="acc-btn active">
-                                <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>How can i transfer bitcoin?</div>
+                                <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>What is Bitcoin?</div>
                             <div class="acc-content current">
                                 <div class="content">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco </p>
+                                    <p>Bitcoin is a consensus network that enables a new payment system using digital money. It is the first decentralized peer-to-peer payment network that is powered by its users with no central authority or middlemen. From a user perspective, bitcoin is pretty much like cash for the Internet.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="accordion block">
+                            <div class="acc-btn">
+                                <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>What is a Cryptocurrency Exchange?</div>
+                            <div class="acc-content">
+                                <div class="content">
+                                    <p>A cryptocurrency exchange is a service for changing digital currencies, such as Bitcoin, Ethereum, and more, to fiat (paper) currencies or for other digital currencies. At Bitfonix, you can exchange your fiat currency, such as dollars or Euro, for several cryptocurrencies. You can also exchange your Bitcoin for fiat.</p>
+                                </div>
+                            </div>
+                        </li>
+                        
+                        <!--Block-->
+                        <li class="accordion block">
+                            <div class="acc-btn">
+                                <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>Why must I provide my personal details?</div>
+                            <div class="acc-content">
+                                <div class="content">
+                                    <p>Before creating your first order, we need to know a bit about you. As a financial service, Bitfonix is committed to the highest security and privacy standards. This also helps us keep your account safe, fight fraud, and more. The process is called verification and is something everyone must go through before buying cryptocurrency anywhere. After submitting your details for verification, we’ll then quickly go over it and make sure everything looks good. This usually happens within the hour.</p>
                                 </div>
                             </div>
                         </li>
@@ -253,10 +264,10 @@
                         <!--Block-->
                         <li class="accordion block">
                             <div class="acc-btn">
-                                <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>What about the trading with Bitfonix?</div>
+                                <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>How long does it take for Bitfonix to send my bitcoins once I’ve paid?</div>
                             <div class="acc-content">
                                 <div class="content">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. </p>
+                                    <p>Bitfonix sends the coins immediately after both your payment and wallet address have been confirmed.</p>
                                 </div>
                             </div>
                         </li>
@@ -264,10 +275,10 @@
                         <!--Block-->
                         <li class="accordion block">
                             <div class="acc-btn">
-                                <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>what about the investment planing?</div>
+                                <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>Where can I get a Bitcoin/Ethereum wallet?</div>
                             <div class="acc-content">
                                 <div class="content">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. </p>
+                                    <p>Bitfonix is not a wallet provider - we simply send your coins to the wallet of your choice.</p>
                                 </div>
                             </div>
                         </li>
@@ -275,21 +286,10 @@
                         <!--Block-->
                         <li class="accordion block">
                             <div class="acc-btn">
-                                <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>How can i get the price idea?</div>
+                                <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>What methods of payment does Bitfonix offer?</div>
                             <div class="acc-content">
                                 <div class="content">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. </p>
-                                </div>
-                            </div>
-                        </li>
-
-                        <!--Block-->
-                        <li class="accordion block">
-                            <div class="acc-btn">
-                                <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>How can i contact with you?</div>
-                            <div class="acc-content">
-                                <div class="content">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. </p>
+                                    <p>At Bitfonix you can currently buy bitcoin and other cryptocurrencies with bank wire transfer.</p>
                                 </div>
                             </div>
                         </li>
@@ -316,7 +316,7 @@
 					</div>
 					<div class="promo-content">
 						<h4>Who we are?</h4>
-						<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illodrut inventore veritatis et quasi architecto beatae vitae dicta sunt. </p>
+						<p>Bitfonix, founded in 2013 by experienced system architects and technology experts, is one of the oldest and fastest growing crypto exchanges in existence. With an unparalleled track record of reliability.</p>
 						<a href="{% url 'about-us' %}" class="btn-style btn-filled mt-3">Read More <i class="icofont icofont-caret-right"></i></a>
 						<div class="signature-img float-lg-right float-md-right float-none mt-3"><img src="{% static 'assets/img/bg/signature.png' %}" class="img-fluid" alt=""></div>
 					</div>	
@@ -546,7 +546,7 @@
 			<div class="row mt-5">
 				<div class="col-12 text-center">
 					<div class="serviceall-btn wow fadeInDown">
-						<a href="#">Check All Services <i class="icofont icofont-long-arrow-right"></i></a>
+						<a href="{% url 'services' %}">Check All Services <i class="icofont icofont-long-arrow-right"></i></a>
 					</div>
 				</div>
 			</div>	
