--- a/bitcoin_pages/templates/bitcoin_pages/services.html
+++ b/bitcoin_pages/templates/bitcoin_pages/services.html
@@ -53,8 +53,8 @@
 								</div>
 							</div>
 							<div class="single-service-dec">
-								<p>Lorem ipsum dolor sit amet consectetur ullamco adipiscing elit, sed do eiusmod tempor exercitat incididunt ut labore.
-									<a href="#">[...]</a>
+								<p>Bifonix has consistently taken measures to ensure its platform makes online trading and investing accessible to anyone
+									<a href="{% url 'bitcoin_trading' %}">[...]</a>
 								</p>
 							</div>	
 						</div>							
@@ -76,8 +76,8 @@
 								</div>
 							</div>
 							<div class="single-service-dec">
-								<p>Lorem ipsum dolor sit amet consectetur ullamco adipiscing elit, sed do eiusmod tempor exercitat incididunt ut labore.
-									<a href="#">[...]</a>
+								<p>With Bitfonix, you can easily buy Bitcoin with cash, as well as other cryptocurrencies we offer on the platform.
+									<a href="{% url 'coin_buy' %}">[...]</a>
 								</p>
 							</div>	
 						</div>							
@@ -99,8 +99,8 @@
 								</div>
 							</div>
 							<div class="single-service-dec">
-								<p>Lorem ipsum dolor sit amet consectetur ullamco adipiscing elit, sed do eiusmod tempor exercitat incididunt ut labore.
-									<a href="#">[...]</a>
+								<p>Bitcoin and Ethereum is an open source network, much more than just a digital currency. At Bitfonix, we not only trade your assets, we secure it as well.
+									<a href="{% url 'bitcoin_ethereum' %}">[...]</a>
 								</p>
 							</div>	
 						</div>							
@@ -122,8 +122,8 @@
 								</div>
 							</div>
 							<div class="single-service-dec">
-								<p>Lorem ipsum dolor sit amet consectetur ullamco adipiscing elit, sed do eiusmod tempor exercitat incididunt ut labore.
-									<a href="#">[...]</a>
+								<p>Bank on Bitfonix’s experience as a global fintech leader since the early days of Blockchain to provide you with a complete crypto trading solution.
+									<a href="{% url 'crypto_trading' %}">[...]</a>
 								</p>
 							</div>	
 						</div>							
@@ -145,8 +145,8 @@
 								</div>
 							</div>
 							<div class="single-service-dec">
-								<p>Lorem ipsum dolor sit amet consectetur ullamco adipiscing elit, sed do eiusmod tempor exercitat incididunt ut labore.
-									<a href="#">[...]</a>
+								<p>BIT Solution Ltd (hereinafter "The Platform Technology") provides access to crypto assets exchange platform technology under the registered trademark "BITFONIX".
+									<a href="{% url 'bitcoin_legality' %}">[...]</a>
 								</p>
 							</div>	
 						</div>							
@@ -168,8 +168,8 @@
 								</div>
 							</div>
 							<div class="single-service-dec">
-								<p>Lorem ipsum dolor sit amet consectetur ullamco adipiscing elit, sed do eiusmod tempor exercitat incididunt ut labore.
-									<a href="#">[...]</a>
+								<p>Bitfonix takes every necessary precaution to keep its clients’ personal information and funds safe and secure.
+									<a href="{% url 'security_ensure' %}">[...]</a>
 								</p>
 							</div>	
 						</div>							
