--- a/templates/404.html
+++ b/templates/404.html
@@ -129,7 +129,7 @@
 				<div class="row">
 					<div class="col-12 text-center">
 						<ol class="breadcrumb">
-							<li class="breadcrumb-item"><a href="#">Home</a></li>
+							<li class="breadcrumb-item"><a href="{% url 'index' %}">Home</a></li>
 							<li class="breadcrumb-item active">404</li>
 						</ol>
 					</div>
@@ -160,32 +160,6 @@
     </section>
     <!-- END 404 SECTION -->
 	
-	<!-- START NEWSLETTER SECTION -->
-    <div id="errornews" class="errorsection-padding bg-gray">
-        <div class="container">	 
-			<div class="row text-center">
-				<div class="col-lg-8 col-md-8 col-8 mx-auto">
-					<div class="error-search">
-						<h4 class="mb-5">Dailly Newsletter Signup</h4>
-						<form action="#" method="post">
-							<div class="row">
-								<div class="form-group col-lg-11 col-md-10 col-12 p-0">
-									<input type="search" name="esearch" class="form-control" placeholder="Email address here">
-								</div>
-								<div class="form-group col-lg-1 col-md-2 col-6 p-0 mt-lg-0 mt-md-0 mt-3">
-									<button type="submit" class="btn-style btn-filled btn-filled-2">SUBSCRIBE</button>
-								</div>
-							</div>
-						</form>
-					</div>
-				</div>
-				<!-- end col -->
-			</div>
-			<!-- end row -->
-        </div>
-        <!--- END CONTAINER -->
-    </div>
-    <!-- END NEWSLETTER SECTION -->
 	
     <!-- START FOOTER -->
     <footer>
@@ -195,7 +169,7 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-6 col-sm-12 col-12 mb-lg-0 mb-md-5 mb-5 footer-widget">
                         <div class="footer-logo col-12 p-0">
-                            <a href="index-2.html">
+                            <a href="{% url 'index' %}">
 								<div class="footer-logo-icon">
                                  <i class="fab fa-gg-circle"></i>
                                 </div>
